# SCITE-RNA-v2

./: .gitignore  CMakeLists.txt  README.md  Snakefile  Snakefile_real_data.smk  environment.yml  tests.ipynb
config/: config.yaml
data/input_data/BT_S2/: SRR_Acc_List_BT_S2.txt  SraRunTable_BT_S2.csv  alt.csv  alt2.csv  ref.csv  ref2.csv
data/input_data/mm16/: alt.csv  gene_expression_counts.csv  gene_expression_counts_ensembl_ids.csv  gene_positions.csv  ref.csv
data/input_data/mm34/: alt.csv  alt_reduced.csv  ref.csv  ref_reduced.csv
data/input_data/new_data/: alt.txt  ref.txt
data/input_data/test/: alt.csv  ref.csv
data/results - Kopie/figures/: optimal_tree_llh_comparison_100c500m.json  optimal_tree_llh_comparison_500c100m.json  optimal_tree_llh_comparison_500c500m.json
data/simulated_data/: model_comparison.json
data_summary/real_data/: global_parameters.json  mean_individual_dropouts.json  mean_individual_overdispersions_h.json
data_summary/simulated_data/: adjusted_rand_index.json  genotype_differences.json  genotype_differences_large.json  path_len_differences.json  path_len_differences_large.json  rf_differences.json  rf_differences_large.json  runtimes.json
generate_results_cpp/: MM.cpp  comparison_bootstrapping.cpp  comparison_num_clones.cpp  comparison_parameters.cpp  comparison_tree_spaces_switching.cpp  dataset_metrics.cpp  real_data_processing.cpp  run.sh  run_sciterna.cpp  space_switching_comparison.cpp  space_switching_results_postprocessing.cpp
generate_results_python_r/: MM.py  MM_new_noise_model.py  Multiple_myeloma_preprocessing.py  bootstrap_results_mm.ipynb  breast_cancer.R  comparison_clones_sclineager_dendro_sciterna.R  comparison_clones_sclineager_dendro_sciterna_cardelino.R  comparison_data_generation.py  comparison_num_clones.ipynb  comparison_tree_spaces_switching.py  data_analysis.ipynb  generate_consensus_parent_vector.py  generate_summary_statistics.ipynb  mutation_filtering.ipynb  noise model tests.ipynb  noise model.ipynb  parameter_testing.ipynb  parameter_testing_sclineager_dendro.R  real_data_clustering.R  real_data_processing.py  real_data_sclineager_dendro.R  results_real_data.ipynb  variants_frequency_by_distribution.ipynb  visualize_simulated_data.ipynb
phylinsic_scripts/: R_scripts.yaml  analyze_mcc_tree.R  beastlib.R  calc_neighbor_scores1.R  call_genotypes1.R  extract_runtimes.py  fasta_to_phylinsic_genotype.py  make_fasta_file.py  newick_to_parent_vec.py  run_beast2.R  test_parameters.sh
src/: cell_tree.cpp  cell_tree.h  mutation_filter.cpp  mutation_filter.h  mutation_tree.cpp  mutation_tree.h  swap_optimizer.cpp  swap_optimizer.h
src_cpp/: cell_tree.cpp  cell_tree.h  config.cpp  config.h  generate_results.cpp  generate_results.h  mutation_filter.cpp  mutation_filter.h  mutation_tree.cpp  mutation_tree.h  swap_optimizer.cpp  swap_optimizer.h  utils.cpp  utils.h
src_python/: cell_tree.py  data_generator.py  data_generator_simple.py  generate_results.py  mutation_filter.py  mutation_tree.py  noise_mutation_filter.py  noise_mutation_filter_simple.py  swap_optimizer.py  tree_base.py  utils.py
tests/: MM.cpp  comparison_num_clones.cpp  comparison_tree_spaces_switching.cpp
(+20317 files in other folders)
